--- a/css/style.css
+++ b/css/style.css
@@ -1604,7 +1604,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   margin-bottom: 30px; }
 
 .site-footer {
-  background: #136ad5;
+  background: #000000;
   font-size: 14px;
   color: #ffffff;
   padding: 70px 0; }
